src/objects/Task_History__c.object
<CustomObject>
    <description>XLR8 custom object that records the history of changes made to Task records.</description>
    <fields>
        <fullName>Activity_ID__c</fullName>
        <label>Activity ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assigned_To_ID__c</fullName>
        <label>Assigned To ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Completion_Date__c</fullName>
        <label>Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contact_Lead_ID__c</fullName>
        <label>Contact/Lead ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Link_To_Related_Record__c</fullName>
        <formula>HYPERLINK( Related_To_ID__c ,  &quot;Link to Related To Record&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Link to Related Record</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Meaningful_Activity__c</fullName>
        <label>Meaningful Activity</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_To_ID__c</fullName>
        <label>Related To ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <label>Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Task_Duration__c</fullName>
        <label>Task Duration</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Task_Sub_Category__c</fullName>
        <label>Task Sub-Category</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Task_Type__c</fullName>
        <label>Task Type</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>Task History</label>
    <nameField>
        <displayFormat>TH-{YYYY}{MM}{DD}-{000000}</displayFormat>
        <label>Task History ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Task History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>